--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prakit Clinic – คลินิกที่คุณไว้ใจ</title>
-    <link rel="icon" href="logo/logo.png" type="image/png">
+    <link rel="icon" href="logo.png" type="image/png">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
     <link rel="stylesheet" href="styles.css">
@@ -30,7 +30,7 @@
     <header class="bg-white shadow-md sticky top-0 z-50 animate-fade-in">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-2 flex justify-between items-center">
             <a href="#home" class="flex items-center gap-3 hover:opacity-90 transition duration-150">
-                <img src="logo/logo.png" alt="โลโก้คลินิกหมอประกิต" class="h-16 w-auto">
+                <img src="logo.png" alt="โลโก้คลินิกหมอประกิต" class="h-16 w-auto">
                 <div class="flex flex-col">
                     <span class="text-lg sm:text-xl font-bold text-emerald-900 leading-tight">คลินิกหมอประกิต</span>
                     <span class="text-sm sm:text-base font-medium text-emerald-600">Prakit Clinic</span>
@@ -51,12 +51,12 @@
 
     <!-- Tagline box hero section -->
     <section id="home" class="relative w-full h-[600px]"
-        style="background-image:url('herosectionimage/H1.png'); background-size:contain; background-position:center; background-repeat:no-repeat;">
+        style="background-image:url('H1.png'); background-size:contain; background-position:center; background-repeat:no-repeat;">
         <div class="absolute inset-0 flex items-center justify-end pr-4 md:pr-20">
             <div
                 class="bg-white/95 backdrop-blur-sm rounded-3xl shadow-2xl p-8 w-96 flex flex-col items-center animate-slide-up border border-emerald-100">
                 <div class="text-center">
-                    <img src="logo/logo2.png" alt="โลโก้คลินิกหมอประกิต"
+                    <img src="logo2.png" alt="โลโก้คลินิกหมอประกิต"
                         class="w-24 h-24 mx-auto mb-6 rounded-2xl shadow-md">
                     <h2 class="text-2xl font-bold text-emerald-900 mb-3">คลินิกหมอประกิต</h2>
                     <p class="text-emerald-700 text-base font-medium mb-6 leading-relaxed">
@@ -123,47 +123,47 @@
                         <!-- Gallery Items -->
                         <div
                             class="flex-none w-80 h-60 rounded-2xl overflow-hidden shadow-lg snap-center transform hover:scale-105 transition-transform duration-300">
-                            <img src="gallerysectionimage/1.png" alt="Gallery 1" class="w-full h-full object-cover">
+                            <img src="1.png" alt="Gallery 1" class="w-full h-full object-cover">
                         </div>
                         <div
                             class="flex-none w-80 h-60 rounded-2xl overflow-hidden shadow-lg snap-center transform hover:scale-105 transition-transform duration-300">
-                            <img src="gallerysectionimage/2.png" alt="Gallery 2" class="w-full h-full object-cover">
+                            <img src="2.png" alt="Gallery 2" class="w-full h-full object-cover">
                         </div>
                         <div
                             class="flex-none w-80 h-60 rounded-2xl overflow-hidden shadow-lg snap-center transform hover:scale-105 transition-transform duration-300">
-                            <img src="gallerysectionimage/3.png" alt="Gallery 3" class="w-full h-full object-cover">
+                            <img src="3.png" alt="Gallery 3" class="w-full h-full object-cover">
                         </div>
                         <div
                             class="flex-none w-80 h-60 rounded-2xl overflow-hidden shadow-lg snap-center transform hover:scale-105 transition-transform duration-300">
-                            <img src="gallerysectionimage/4.png" alt="Gallery 4" class="w-full h-full object-cover">
+                            <img src="4.png" alt="Gallery 4" class="w-full h-full object-cover">
                         </div>
                         <div
                             class="flex-none w-80 h-60 rounded-2xl overflow-hidden shadow-lg snap-center transform hover:scale-105 transition-transform duration-300">
-                            <img src="gallerysectionimage/5.jpg" alt="Gallery 5" class="w-full h-full object-cover">
+                            <img src="5.jpg" alt="Gallery 5" class="w-full h-full object-cover">
                         </div>
                         <div
                             class="flex-none w-80 h-60 rounded-2xl overflow-hidden shadow-lg snap-center transform hover:scale-105 transition-transform duration-300">
-                            <img src="gallerysectionimage/6.jpg" alt="Gallery 6" class="w-full h-full object-cover">
+                            <img src="6.jpg" alt="Gallery 6" class="w-full h-full object-cover">
                         </div>
                         <div
                             class="flex-none w-80 h-60 rounded-2xl overflow-hidden shadow-lg snap-center transform hover:scale-105 transition-transform duration-300">
-                            <img src="gallerysectionimage/7.png" alt="Gallery 7" class="w-full h-full object-cover">
+                            <img src="7.png" alt="Gallery 7" class="w-full h-full object-cover">
                         </div>
                         <div
                             class="flex-none w-80 h-60 rounded-2xl overflow-hidden shadow-lg snap-center transform hover:scale-105 transition-transform duration-300">
-                            <img src="gallerysectionimage/8.png" alt="Gallery 8" class="w-full h-full object-cover">
+                            <img src="8.png" alt="Gallery 8" class="w-full h-full object-cover">
                         </div>
                         <div
                             class="flex-none w-80 h-60 rounded-2xl overflow-hidden shadow-lg snap-center transform hover:scale-105 transition-transform duration-300">
-                            <img src="gallerysectionimage/9.png" alt="Gallery 9" class="w-full h-full object-cover">
+                            <img src="9.png" alt="Gallery 9" class="w-full h-full object-cover">
                         </div>
                         <div
                             class="flex-none w-80 h-60 rounded-2xl overflow-hidden shadow-lg snap-center transform hover:scale-105 transition-transform duration-300">
-                            <img src="gallerysectionimage/10.png" alt="Gallery 10" class="w-full h-full object-cover">
+                            <img src="10.png" alt="Gallery 10" class="w-full h-full object-cover">
                         </div>
                         <div
                             class="flex-none w-80 h-60 rounded-2xl overflow-hidden shadow-lg snap-center transform hover:scale-105 transition-transform duration-300">
-                            <img src="gallerysectionimage/11.png" alt="Gallery 11" class="w-full h-full object-cover">
+                            <img src="11.png" alt="Gallery 11" class="w-full h-full object-cover">
                         </div>
                     </div>
                 </div>
